Uploading BodyParts Playground

--- a/SimpleButtons/SimpleButtons/Base.lproj/Main.storyboard
+++ b/SimpleButtons/SimpleButtons/Base.lproj/Main.storyboard
@@ -207,6 +207,9 @@
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="decimalPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="D26-Ja-2eG"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eKN-zc-KEf">
                                 <rect key="frame" x="237" y="485" width="75" height="75"/>
