--- a/TicTacToe/TicTacToe/Base.lproj/Main.storyboard
+++ b/TicTacToe/TicTacToe/Base.lproj/Main.storyboard
@@ -203,29 +203,18 @@
                                     <action selector="buttonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="LFt-8u-tGL"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5x4-TG-dEm">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5x4-TG-dEm">
                                 <rect key="frame" x="160" y="496" width="93" height="72"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sHR-jm-e3n">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sHR-jm-e3n">
                                 <rect key="frame" x="59" y="496" width="93" height="72"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oCb-Ut-EjK">
-                                <rect key="frame" x="41" y="515" width="239" height="130"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="130" id="6ag-r2-Ff6"/>
-                                    <constraint firstAttribute="width" constant="239" id="ZPJ-MZ-Ef3"/>
-                                    <constraint firstAttribute="width" secondItem="oCb-Ut-EjK" secondAttribute="height" multiplier="239:130" id="cNd-P2-Z96"/>
-                                </constraints>
-                                <state key="normal" title="Button" image="circles.png">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rAT-7S-wAP">
                                 <rect key="frame" x="18" y="20" width="279" height="49"/>
                                 <constraints>
@@ -249,6 +238,12 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="06R-J5-ksD">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="12"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -256,7 +251,6 @@
                             <constraint firstItem="cJX-Dp-nzg" firstAttribute="width" secondItem="Nc2-eR-QaQ" secondAttribute="height" multiplier="1:1" id="Am5-rJ-cFg"/>
                             <constraint firstItem="cJX-Dp-nzg" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-26" id="B0O-dg-tNK"/>
                             <constraint firstItem="rAT-7S-wAP" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="2" id="GAH-Qi-Rdr"/>
-                            <constraint firstItem="oCb-Ut-EjK" firstAttribute="top" secondItem="70Y-dp-Gzi" secondAttribute="bottom" constant="32" id="GdJ-2Y-xdx"/>
                             <constraint firstItem="Tww-nz-gXY" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="79" id="KxJ-F6-7Pf"/>
                             <constraint firstItem="cJX-Dp-nzg" firstAttribute="width" secondItem="bSD-A7-ZAV" secondAttribute="height" multiplier="1:1" id="LdJ-x8-S8R"/>
                             <constraint firstItem="bSD-A7-ZAV" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-26" id="Nys-aE-isF"/>
@@ -266,9 +260,7 @@
                             <constraint firstItem="4fP-kg-hFP" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="124" id="ZNY-W1-XcO"/>
                             <constraint firstItem="cJX-Dp-nzg" firstAttribute="width" secondItem="4fP-kg-hFP" secondAttribute="height" multiplier="1:1" id="ZV6-AG-c2G"/>
                             <constraint firstItem="rAT-7S-wAP" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="agJ-Sy-G4S"/>
-                            <constraint firstItem="oCb-Ut-EjK" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="25" id="hWG-v8-z6Y"/>
                             <constraint firstItem="Nc2-eR-QaQ" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="124" id="kWb-wU-JMH"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="oCb-Ut-EjK" secondAttribute="trailing" constant="24" id="kro-qD-dpT"/>
                             <constraint firstItem="4fP-kg-hFP" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-26" id="ncd-1k-vbx"/>
                             <constraint firstItem="aFq-L3-6qG" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="43" id="oMl-4e-QZZ"/>
                             <constraint firstItem="cJX-Dp-nzg" firstAttribute="width" secondItem="Tww-nz-gXY" secondAttribute="height" multiplier="1:1" id="oUw-kx-bxa"/>
@@ -277,17 +269,21 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="320" height="568"/>
                     <connections>
+                        <outlet property="boardSpace" destination="kh9-bI-dsS" id="qh0-XP-tNg"/>
                         <outlet property="player1Points" destination="sHR-jm-e3n" id="5gr-NZ-T8A"/>
                         <outlet property="player1Score" destination="aFq-L3-6qG" id="p1o-SC-dvr"/>
+                        <outlet property="player1ScoreKeeper" destination="sHR-jm-e3n" id="7m4-Ug-yxb"/>
                         <outlet property="player2Points" destination="5x4-TG-dEm" id="NEL-pe-MBO"/>
+                        <outlet property="player2ScoreKeeper" destination="5x4-TG-dEm" id="HuZ-Ya-SUC"/>
+                        <outlet property="playerTurn" destination="06R-J5-ksD" id="P06-rW-PX6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="497" y="314"/>
         </scene>
     </scenes>
     <resources>
-        <image name="circles.png" width="444" height="247"/>
         <image name="logo.png" width="374" height="66"/>
     </resources>
 </document>
