--- a/TicTacToe/TicTacToe/Base.lproj/Main.storyboard
+++ b/TicTacToe/TicTacToe/Base.lproj/Main.storyboard
@@ -244,6 +244,18 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8GR-oF-U6g">
+                                <rect key="frame" x="128" y="249" width="64" height="50"/>
+                                <color key="backgroundColor" red="0.96078431369999995" green="0.4549019608" blue="0.058823529409999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Reset ">
+                                    <color key="titleColor" red="0.60392156860000001" green="0.60784313729999995" blue="0.61568627450000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="resetButton:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Jen-aI-GHc"/>
+                                    <action selector="resetGame:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="G2x-ed-IVg"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -276,6 +288,7 @@
                         <outlet property="player2Points" destination="5x4-TG-dEm" id="NEL-pe-MBO"/>
                         <outlet property="player2ScoreKeeper" destination="5x4-TG-dEm" id="HuZ-Ya-SUC"/>
                         <outlet property="playerTurn" destination="06R-J5-ksD" id="P06-rW-PX6"/>
+                        <outlet property="resetButton" destination="8GR-oF-U6g" id="uxH-P9-DqG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
