--- a/GitHubFriends/GitHubFriends/Base.lproj/Main.storyboard
+++ b/GitHubFriends/GitHubFriends/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="54l-AO-HtU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="307" y="396"/>
+            <point key="canvasLocation" x="407" y="710"/>
         </scene>
         <!--GitHub Friends-->
         <scene sceneID="dQu-ze-JDA">
@@ -75,30 +75,30 @@
                                             <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="obj-Y2-KLK" customClass="profileLabel">
-                                            <rect key="frame" x="82" y="8" width="110" height="33"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <rect key="frame" x="83" y="-4" width="450" height="33"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="18"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E6b-mZ-HXk">
-                                            <rect key="frame" x="200" y="8" width="105" height="50"/>
+                                            <rect key="frame" x="82" y="25" width="112" height="34"/>
                                             <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <state key="normal" title="Test">
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
                                             <connections>
-                                                <action selector="gistButton:" destination="suz-Ee-F8k" eventType="touchUpInside" id="L3F-4n-EwE"/>
-                                                <action selector="reposClick:" destination="eNE-x9-wXg" eventType="touchUpInside" id="Bbf-Np-u6y"/>
+                                                <action selector="repoButton:" destination="suz-Ee-F8k" eventType="touchUpInside" id="8IY-HU-jvz"/>
+                                                <segue destination="GJZ-wG-p55" kind="show" id="uU1-hd-LHq"/>
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pdR-Bx-WHy">
-                                            <rect key="frame" x="324" y="8" width="105" height="50"/>
+                                            <rect key="frame" x="208" y="25" width="112" height="34"/>
                                             <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <state key="normal">
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
                                             <connections>
-                                                <action selector="gistsClick:" destination="eNE-x9-wXg" eventType="touchUpInside" id="ndj-Bz-0yK"/>
+                                                <action selector="gistButton:" destination="suz-Ee-F8k" eventType="touchUpInside" id="7vg-TQ-jgX"/>
                                             </connections>
                                         </button>
                                     </subviews>
@@ -122,38 +122,40 @@
                     <connections>
                         <outlet property="addFriend" destination="i2q-84-DMK" id="znl-qH-7gr"/>
                         <outlet property="friendNameField" destination="Spq-p3-O98" id="u0g-Jc-vkL"/>
-                        <segue destination="DhN-eN-8d5" kind="show" identifier="nextProfile" id="maW-7v-Fsx"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zVK-ta-GfT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1211" y="344"/>
         </scene>
-        <!--Friends Table View Controller-->
-        <scene sceneID="ocX-n6-HVr">
+        <!--View Controller-->
+        <scene sceneID="5Lx-xu-9Y2">
             <objects>
-                <tableViewController id="DhN-eN-8d5" customClass="FriendsTableViewController" customModule="GitHubFriends" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="oqd-4o-FLg">
+                <viewController id="GJZ-wG-p55" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="G0S-a5-si7"/>
+                        <viewControllerLayoutGuide type="bottom" id="J9q-6Z-oX8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="11j-OU-6KH" customClass="ProfileTableViewCell" customModule="GitHubFriends" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2O0-ls-pHf">
+                                <rect key="frame" x="30" y="113" width="215" height="50"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="WEd-dp-bHM" customClass="ProfileTableViewCell" customModule="GitHubFriends" customModuleProvider="target">
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WEd-dp-bHM" id="O8x-Y6-mEm">
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="DhN-eN-8d5" id="0aR-UA-yLE"/>
-                            <outlet property="delegate" destination="DhN-eN-8d5" id="wtW-Wz-uEr"/>
+                            <outlet property="repoName" destination="2O0-ls-pHf" id="meC-Cg-rya"/>
                         </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="fbu-VQ-twR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="p8k-kb-ffd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1951" y="374"/>
+            <point key="canvasLocation" x="1952" y="344"/>
         </scene>
     </scenes>
 </document>
